# thRAG

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml
eval/: eval_example.py
src/thrag/: __init__.py  cli.py  llm_utils.py  log.py
src/thrag/ingestion/: chunking.py  ingestion.py  models.py  pdf_processing.py  sectioning.py
tests/: test_chunking.py  test_ingestion.py  test_pdf_processing.py  test_sectioning.py
