[tool.poetry]
name = "thrag"
version = "0.0.1"
description = "A RAG, initially for EU regulation on medical laws (including MDR, IVDR) and recomendations, that is derived from dsRAG and is really performant"
authors = ["Tycho Tatitscheff <tychot@bam.tech>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
ruff = "^0.9.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 119
target-version = ["py39", "py310", "py311", "py312"]
exclude = "/(\\.venv|env|venv|build|dist|\\.git|\\.idea)/"

[tool.ruff]
select = ["E", "F", "W", "B", "C", "I"]
ignore = []
exclude = [".venv", "venv", "env", "build", "dist"]
line-length = 119
