[tool.poetry]
name = "thrag"
version = "0.0.1"
description = "A RAG, initially for EU regulation on medical laws (including MDR, IVDR) and recomendations, that is derived from dsRAG and is really performant"
authors = ["Tycho Tatitscheff <tychot@bam.tech>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "thrag", from = "src" }]

[tool.poetry.scripts]
thrag = "thrag.cli:main"

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
click = "^8.1.8"
rich = "^13.9.4"
structlog = "^25.1.0"
litellm = "^1.59.9"
pydantic = "^2.10.6"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
ruff = "^0.9.3"
pytest = "^8.3.4"
ragas = "^0.2.12"
pre-commit = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 110
target-version = ["py39", "py310", "py311", "py312"]
exclude = "/(\\.venv|env|venv|build|dist|\\.git|\\.idea)/"

[tool.ruff]
lint.select = ["E", "F", "W", "B", "C", "I"]
lint.ignore = []
exclude = [".venv", "venv", "env", "build", "dist"]
line-length = 110

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
